Nuevos cambios en pantalla Se arregla namespace

--- a/TesterBlazor/Components/Pages/Home.razor
+++ b/TesterBlazor/Components/Pages/Home.razor
@@ -3,5 +3,39 @@
 <PageTitle>Home</PageTitle>
 
 <h1>Bienvenidos a la aplicación de pruebas Blazor 👋🏻</h1>
+<div>
+    <label>Esta aplicación contiene elementos de Blazor básicos que permiten hacer una llamada y demostración de la librería .NET creada.</label>
+</div>
 
-Esta aplicación contiene elementos de Blazor básicos que permiten hacer una llamada y demostración de la librería .NET creada.
+<div class="row" style="margin-top: 15px">
+    <div class="col-sm-6 mb-3 mb-sm-0">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Links y referencias sobre este proyecto</h5>
+                <a href="#" class="btn btn-outline-danger">Repositorio GitHub</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Redes sociales</h5>
+                <a href="#" class="btn btn-outline-info">Ver más</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="card text-center" style="margin-top:15px">
+    <div class="card-header">
+        ¡Atención!
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Leer antes de comenzar</h5>
+        <p class="card-text">Por favor: dirigirse hacia el README o Instucciones para más especificaciones sobre este proyecto y usar por su propio riesgo.</p>
+        <a href="#" class="btn btn-danger">README</a>
+    </div>
+    <div class="card-footer text-body-secondary">
+        Contactarse por chat
+    </div>
+</div>
