Se agrega conexión con API local. Se configuran js. Otros.

--- a/TesterBlazor/Components/Pages/Home.razor
+++ b/TesterBlazor/Components/Pages/Home.razor
@@ -28,7 +28,7 @@
 
 <div class="card text-center" style="margin-top:15px">
     <div class="card-header">
-        ¡Atención!
+        ⚠️ ¡Atención! ⚠️
     </div>
     <div class="card-body">
         <h5 class="card-title">Leer antes de comenzar</h5>
