--- a/TesterBlazor/Components/App.razor
+++ b/TesterBlazor/Components/App.razor
@@ -15,7 +15,10 @@
 
 <body>
     <Routes @rendermode="PageRenderMode" />
+    <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="_framework/blazor.web.js"></script>
+    <script src="lib/bootstrap/dist/js/popper.min.js"></script>
+    <script src="src/js/js-extra.js"></script>
 </body>
 
 </html>
