--- a/TesterBlazor/Components/Pages/Home.razor
+++ b/TesterBlazor/Components/Pages/Home.razor
@@ -1,4 +1,6 @@
-﻿@page "/"
+﻿@inject IJSRuntime JSRuntime
+
+@page "/"
 
 <PageTitle>Home</PageTitle>
 
@@ -8,19 +10,26 @@
 </div>
 
 <div class="row" style="margin-top: 15px">
-    <div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="col-sm-6">
         <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Links y referencias sobre este proyecto</h5>
-                <a href="#" class="btn btn-outline-danger">Repositorio GitHub</a>
+            <div class="card-body d-flex justify-content-between align-items-center">
+                <h5 class="card-title">Links y referencias sobre este proyecto:</h5>
+                <a href="https://github.com/ramiroagm/WinFormTester" class="btn btn-outline-danger">Repositorio GitHub</a>
             </div>
         </div>
     </div>
     <div class="col-sm-6">
         <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Redes sociales</h5>
-                <a href="#" class="btn btn-outline-info">Ver más</a>
+            <div class="card-body d-flex justify-content-between align-items-center">
+                <h5 class="card-title">Redes sociales:</h5>
+                <button type="button" class="btn btn-outline-info"
+                        data-bs-toggle="popover"
+                        data-bs-title="Redes sociales activas hoy"
+                        data-bs-html="true"
+                        data-bs-content="<a href='https://www.linkedin.com/in/ramiroagm/' target='_blank'>LinkedIn</a>
+                                        <br><a href='https://instagram.com/ramiroagm' target='_blank'>Instagram</a>">
+                    Ver más
+                </button>
             </div>
         </div>
     </div>
@@ -33,9 +42,19 @@
     <div class="card-body">
         <h5 class="card-title">Leer antes de comenzar</h5>
         <p class="card-text">Por favor: dirigirse hacia el README o Instucciones para más especificaciones sobre este proyecto y usar por su propio riesgo.</p>
-        <a href="#" class="btn btn-danger">README</a>
+        <a href="https://github.com/ramiroagm/WinFormTester/blob/master/README.md" class="btn btn-danger">README</a>
     </div>
     <div class="card-footer text-body-secondary">
-        Contactarse por chat
+        Por cualquier consulta, por favor, <a href="https://wa.me/+59899113906" target="_blank">contactarse por chat</a>
     </div>
 </div>
+
+@code {
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await JSRuntime.InvokeVoidAsync("initializePopovers");
+        }
+    }
+}
