--- a/TesterBlazor/Components/Layout/MainLayout.razor.css
+++ b/TesterBlazor/Components/Layout/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #808080 0%, #8b1f1f 70%);
 }
 
 .top-row {
