--- a/TesterBlazor/Components/Layout/NavMenu.razor
+++ b/TesterBlazor/Components/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Tester general de librería</a>
+        <a class="navbar-brand" href="">Librería Memito 🐈‍ </a>
     </div>
 </div>
 
