--- a/TesterBlazor/Components/Pages/Home.razor
+++ b/TesterBlazor/Components/Pages/Home.razor
@@ -14,7 +14,7 @@
         <div class="card">
             <div class="card-body d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Links y referencias sobre este proyecto:</h5>
-                <a href="https://github.com/ramiroagm/WinFormTester" class="btn btn-outline-danger">Repositorio GitHub</a>
+                <a href="https://github.com/ramiroagm/WinFormTester" class="btn btn-outline-danger">Repositorio</a>
             </div>
         </div>
     </div>
