--- a/TesterBlazor/Components/Layout/NavMenu.razor
+++ b/TesterBlazor/Components/Layout/NavMenu.razor
@@ -10,24 +10,46 @@
 
 <input type="checkbox" title="Menú de navegación principal" class="navbar-toggler" />
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()" style="margin-top:10px">
     <nav class="nav flex-column">
-        <div class="nav-item px-3">
+        <div class="nav-item px-2">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Inicio
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        <div class="nav-item px-2">
             <NavLink class="nav-link" href="telegram">
                 <span class="bi bi-telegram-ico-figma" aria-hidden="true"></span> Telegram
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        <div class="nav-item px-2">
             <NavLink class="nav-link" href="instagram">
                 <span class="bi bi-instagram-ico-figma" aria-hidden="true"></span> Instagram
             </NavLink>
+        </div>
+        <div class="nav-item px-2">
+            <div class="nav-link dropdown-toggle" data-bs-toggle="collapse" data-bs-target="#submenuCredito" aria-expanded="false">
+                <span class="bi bi-folder-ico-figma" aria-hidden="true"></span>Información de crédito
+            </div>
+            <div id="submenuCredito" class="collapse">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="infoCredito/personas">
+                        <span class="bi bi-new-pers-ico-figma" aria-hidden="true"></span>Personas
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="infoCredito/agregarCredito">
+                        <span class="bi bi-new-credit-ico-figma" aria-hidden="true"></span>Nuevo crédito
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="infoCredito/configNucleo">
+                        <span class="bi bi-config-pers-ico-figma" aria-hidden="true"></span>Configuración
+                    </NavLink>
+                </div>
+            </div>
         </div>
     </nav>
 </div>
